tests/archived/snapshots/create_request__cd-state.snap
---
source: tests/create_request.rs
assertion_line: 98
expression: state
---
expires_at: "[expires_at]"
request_object:
  response_type: vp_token
  client_id: "http://localhost:8080/post"
  response_mode: direct_post
  response_uri: "http://localhost:8080/post"
  nonce: "[nonce]"
  state: "[state]"
  presentation_definition: "[presentation_definition]"
  client_id_scheme: redirect_uri
  client_metadata: "[client_metadata]"
