tests/archived/snapshots/create_request__sd-response.snap
---
source: tests/create_request.rs
assertion_line: 54
expression: response
---
request_object:
  response_type: vp_token
  client_id: "http://localhost:8080/callback"
  nonce: "[nonce]"
  state: "[state]"
  presentation_definition: "[presentation_definition]"
  client_id_scheme: redirect_uri
  client_metadata: "[client_metadata]"
